kubernetes/apps/media/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    pod-security.kubernetes.io/warn: privileged
