kubernetes/apps/media/base/jellyfin.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: jellyfin
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: jellyfin
      port: 8096
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: media
  name: jellyfin
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: jellyfin
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: jellyfin
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "docker.io/jellyfin/jellyfin:10.11.10"
          imagePullPolicy: Always

          ports:
            - containerPort: 8096
              protocol: TCP

          resources:
            requests:
              memory: 150Mi
              cpu: 20m
            limits:
              memory: 3Gi
              cpu: 3000m

          readinessProbe:
            httpGet:
              path: /
              port: 8096
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8096
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /data/media
              name: media-data-pvc
              subPath: media
            - mountPath: /config
              name: jellyfin-conf-pvc
            - mountPath: /cache
              name: jellyfin-cache
            - mountPath: /tmp
              name: tmp

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: jellyfin-cache
          emptyDir:
            sizeLimit: 5Gi
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: jellyfin-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 4Gi
