kubernetes/apps/media/base/prowlarr-qbittorrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: prowlarr-qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: qbittorrent
      port: 8080
      protocol: TCP
    - name: qbittorrent-bt-tcp
      port: 6881
      protocol: TCP
    - name: qbittorrent-bt-udp
      port: 6881
      protocol: UDP
    - name: prowlarr
      port: 9696
      protocol: TCP
    - name: flaresolverr
      port: 8191
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: media
  name: prowlarr-qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
spec:
  serviceName: prowlarr-qbittorrent
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: prowlarr-qbittorrent
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: prowlarr-qbittorrent
    spec:
      restartPolicy: Always
      containers:
        - name: prowlarr
          image: "ghcr.io/onedr0p/prowlarr:1.31.2"
          imagePullPolicy: Always

          ports:
            - containerPort: 9696
              protocol: TCP

          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 250Mi
              cpu: 200m

          readinessProbe:
            httpGet:
              path: /
              port: 9696
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /config
              name: prowlarr-conf-pvc

        - name: qbittorrent
          image: "ghcr.io/onedr0p/qbittorrent:5.0.4"
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP

          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 250Mi
              cpu: 200m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /data/torrents
              name: media-data-pvc
              subPath: torrents
            - mountPath: /config
              name: qbittorrent-conf-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: gluetun-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: gluetun-run
          emptyDir:
            sizeLimit: 1Gi
        - name: gluetun-gluetun
          emptyDir:
            sizeLimit: 1Gi
        - name: gluetun-etc
          emptyDir:
            sizeLimit: 1Gi
        - name: flaresolverr-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: flaresolverr-app
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: prowlarr-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
    - metadata:
        name: qbittorrent-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
