kubernetes/apps/media/base/prowlarr-torrent-flaresolverr-gluetun.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: prowlarr-qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: qbittorrent
      port: 8080
      protocol: TCP
    - name: qbittorrent-bt-tcp
      port: 6881
      protocol: TCP
    - name: qbittorrent-bt-udp
      port: 6881
      protocol: UDP
    - name: prowlarr
      port: 9696
      protocol: TCP
    - name: flaresolverr
      port: 8191
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: media
  name: prowlarr-qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: prowlarr-qbittorrent
  annotations:
    ignore-check.kube-linter.io/no-read-only-root-fs: "Uses lots of directories"
    ignore-check.kube-linter.io/run-as-non-root: "Runs with lower privileges after startup"
spec:
  serviceName: prowlarr-qbittorrent
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: prowlarr-qbittorrent
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: prowlarr-qbittorrent
    spec:
      restartPolicy: Always
      containers:
        - name: prowlarr
          image: "docker.io/linuxserver/prowlarr:1.29.2"
          imagePullPolicy: Always

          # securityContext:
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   runAsUser: 1000
          #   runAsGroup: 1000
          #   allowPrivilegeEscalation: false

          ports:
            - containerPort: 9696
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: 9696
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            # uses a LOT of directories
            # readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false

          volumeMounts:
            - mountPath: /config
              name: prowlarr-conf-pvc

        - name: qbittorrent
          image: "docker.io/linuxserver/qbittorrent:5.0.3"
          imagePullPolicy: Always

          # securityContext:
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   runAsUser: 1000
          #   runAsGroup: 1000
          #   allowPrivilegeEscalation: false

          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: TCP
            - containerPort: 6881
              protocol: UDP

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            # uses a LOT of directories
            # readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false

          volumeMounts:
            - mountPath: /data/torrents
              name: media-data-pvc
              subPath: torrents
            - mountPath: /config
              name: qbittorrent-conf-pvc

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        # Will run with lower privileges after startup anyway
        # runAsNonRoot: true
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"

      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc

  volumeClaimTemplates:
    - metadata:
        name: prowlarr-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
    - metadata:
        name: qbittorrent-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
