kubernetes/apps/media/base/sonarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: media
  name: sonarr
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
spec:
  type: ClusterIP
  ports:
    - name: sonarr
      port: 8989
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: media
  name: sonarr
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: sonarr
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: sonarr
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "ghcr.io/home-operations/sonarr:4.0.18"
          imagePullPolicy: Always

          ports:
            - containerPort: 8989
              protocol: TCP

          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 250Mi
              cpu: 200m

          readinessProbe:
            httpGet:
              path: /
              port: 8989
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /data
              name: media-data-pvc
            - mountPath: /config
              name: sonarr-conf-pvc
            - mountPath: /tmp
              name: sonarr-tmp

      enableServiceLinks: false
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: sonarr-tmp
          emptyDir:
            sizeLimit: 1Gi

  volumeClaimTemplates:
    - metadata:
        name: sonarr-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
