kubernetes/apps/media/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: media
  name: media-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.kalexlab.xyz`)
      services:
        - name: jellyfin
          port: 8096
    - kind: Rule
      match: Host(`prowlarr.kalexlab.xyz`)
      services:
        - name: prowlarr-qbittorrent
          port: 9696
    - kind: Rule
      match: Host(`torrent.kalexlab.xyz`)
      services:
        - name: prowlarr-qbittorrent
          port: 8080
    - kind: Rule
      match: Host(`radarr.kalexlab.xyz`)
      services:
        - name: radarr
          port: 7878
    - kind: Rule
      match: Host(`sonarr.kalexlab.xyz`)
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: media-ingress-certificate-secret
